--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Banana Design</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Eesti Ekspress</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo and Identity</p>
                                                 </div>
                                             </div> 
@@ -161,14 +161,14 @@
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double advertising wow animate__fadeInUp" data-wow-delay="0.2s">
-                                <a href="single-project-page-05.html">
+                                <a href="single-project-page-06.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641632724/Koduleht/900x900px_pipewell_mockup_pedqzi.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Third Eye Glasses</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Pipewell</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Web and Photography</p>
                                                 </div>
                                             </div> 
@@ -179,14 +179,14 @@
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double web photography wow animate__fadeInUp" data-wow-delay="0.4s">
-                                <a href="single-project-page-06.html">
+                                <a href="single-project-page-05.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641560003/Koduleht/vangoghi_mockup3_900x445_apha1i.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Violator Series</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Van Goghi Raamat</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Web and Photography</p>
                                                 </div>
                                             </div> 
@@ -198,7 +198,7 @@
 
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double web photography wow animate__fadeInUp" data-wow-delay="0.4s">
-                                <a href="single-project-page-06.html">
+                                <a href="single-project-page-07.html">
                                     <figure>
                                         <div class="portfolio-img"><img
                                                 src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641648631/Koduleht/900x445_bite_dounat_l2zk5z.jpg"
@@ -207,8 +207,7 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle">
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Violator
-                                                        Series</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Bite Dounts</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Web and Photography</p>
                                                 </div>
                                             </div>
@@ -220,14 +219,14 @@
                             
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double branding photography wow animate__fadeInUp">
-                                <a href="single-project-page-07.html">
+                                <a href="single-project-page-08.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641639598/Koduleht/900x900px-_koolitusmajakasLogo1_in8w4d.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tailoring Interior</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Koolitusmajakas</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Branding and Brochure</p>
                                                 </div>
                                             </div> 
@@ -237,14 +236,14 @@
                             </li>
                             <!-- end portfolio item -->                                
                             <li class="grid-item wow animate__fadeInUp web design" data-wow-delay="0.2s">
-                                <a href="single-project-page-08.html">
+                                <a href="single-project-page-10.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641642437/Koduleht/pictogrammid_mockup_mueceb.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Designblast Inc</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Piktokrammid</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Branding and Brochure</p>
                                                 </div>
                                             </div> 
@@ -255,14 +254,14 @@
                             <!-- end portfolio item -->
                             <!-- start  portfolio item -->
                             <li class="grid-item wow animate__fadeInUp branding advertising" data-wow-delay="0.4s">
-                                <a href="single-project-page-01.html">
+                                <a href="single-project-page-09.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641645404/Koduleht/900x900px_kalender_mockup_xoklxz.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">HardDot Stone</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kustikalender</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Web and Photography</p>
                                                 </div>
                                             </div> 
