--- a/eesti_ekspress.html
+++ b/eesti_ekspress.html
@@ -63,14 +63,15 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Juhtimiskonverents</h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Eesti Ekspress esikaas</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</p>
+                        <p>2021 suvel oli mul võimalus veeta enda praktika Liikva Päikesekodus. Liikva Päikesekodu on kodu suure toetusvajadusega autismispektrihäire, intellektipuude ja Downi sündroomiga noortele.
+                        Seal osutatakse igapäevaelu toetamise, päeva- ja nädalahoiuteenuse osutamist 40-le inimesele, vanuses 18-30 eluaastat. Praktikal olles sain võimaluse kujundada Eesti Ekspressi esikaas. Enda kujunsuses lähtusin ettevõtte sümboolikast. Kujunduse tegin rõõmsa ja päikeselise, et vaatajal tekiks soov ja tahtmine tulla oma silmaga Päikesekodu vaatama.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Jason Richardson</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Liikva Päikesekodu</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Industry:</label>Adventure  /  Travel</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Services:</label>Design, Art Direction, Website</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Date:</label>January 16th, 2017</li>
@@ -86,13 +87,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641657517/Koduleht/Eesti_ekpressi_esikaas_rf6tik.jpg" class="w-100" alt=""/>
                     </div>
+                    
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652250/Koduleht/juhtimiskonverents_i1pjds.jpg" class="w-100" alt=""/>
-                    </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652639/Koduleht/kvaliteedi_logo_wcrj4z.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641658151/Koduleht/eesti_ekspress_orginaal_900x600px_tlgwrl.jpg" class="w-100" alt=""/>
                     </div>
                    
                 </div>
@@ -236,9 +235,9 @@
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-08.html">
+                            <a href="single-project-page-03.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Ametikool 100 Ajakiri
+                                Minu logo
                             </a>
                         </div>
                     </div>
@@ -248,9 +247,9 @@
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
-                            <a href="single-project-page-01.html">
+                            <a href="single-project-page-05.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Mammut Adventure
+                                Van Goghi Raamat
                             </a>
                         </div>
                     </div>
