--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         <section class="wow animate__fadeIn p-0 mobile-height parallax" data-parallax-background-ratio="0.5" style="background-image: url('images/homepage-option18-banner.jpg')">
             <div class="container text-center one-third-screen lg-h-350px md-h-500px sm-h-auto sm-padding-40px-top sm-padding-50px-bottom">
                 <div class="row">
-                    <div class="col-12 col-md-3 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-330px md-h-500px sm-h-auto text-center wow animate__bounceInLeft sm-h-auto sm-margin-30px-bottom">
+                    <div class="col-12 col-md-3 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-330px md-h-500px sm-h-auto text-center wow  sm-h-auto sm-margin-30px-bottom">
                         <img alt="" src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641635896/Koduleht/portree-02_xqjfbd.jpg">
                     </div>
-                    <div class="col-12 col-md-9 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-350px md-h-500px sm-h-auto text-center wow animate__bounceInRight sm-h-auto">
-                        <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto">I'm <span class="font-weight-600 text-bold-underline position-relative">Oliver Juss</span></div>
-                        <div class="text-medium-gray text-small text-uppercase margin-40px-top letter-spacing-2 alt-font sm-margin-10px-top">Designer & Frontend Developer</div>
+                    <div class="col-12 col-md-9 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-350px md-h-500px sm-h-auto text-center sm-h-auto">
+                        <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto"><span class="font-weight-600 text-bold-underline position-relative">Portfoolio</span></div>
+                        <div class="text-medium-gray text-large text-uppercase margin-40px-top letter-spacing-2 alt-font sm-margin-10px-top">OLIVER JUSS</div>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                             <li class="grid-sizer"></li>
                             <!-- start portfolio item -->
                             <li class="grid-item wow animate__fadeInUp advertising design">
-                                <a href="single-project-page-01.html">
+                                <a href="ajakiri.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_900/v1641308899/Koduleht/Kaanekujundus_800x800px_l4fxja.jpg" alt=""/></div>
                                         <figcaption>
@@ -107,7 +107,7 @@
                             <!-- end portfolio item -->
                             <!-- start  portfolio item -->
                             <li class="grid-item wow animate__fadeInUp web branding photography" data-wow-delay="0.2s">
-                                <a href="single-project-page-02.html">
+                                <a href="konverents_logo.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641628948/Koduleht/900x900_arvuti_ja_tefeoni_kaliteediuhingu_mockup_rooqa4.jpg" alt=""/></div>
                                         <figcaption>
@@ -125,7 +125,7 @@
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double design wow animate__fadeInUp" data-wow-delay="0.4s">
-                                <a href="single-project-page-03.html">
+                                <a href="minu_cvi.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641563173/Koduleht/olivercvi_900x900_qox8xg.jpg" alt=""/></div>
                                         <figcaption>
@@ -143,7 +143,7 @@
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double branding web wow animate__fadeInUp">
-                                <a href="single-project-page-04.html">
+                                <a href="eesti_ekspress.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641489256/Koduleht/eesti_ekspress_900x445_w4savs.jpg" alt=""/></div>
                                         <figcaption>
@@ -161,7 +161,7 @@
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double advertising wow animate__fadeInUp" data-wow-delay="0.2s">
-                                <a href="single-project-page-06.html">
+                                <a href="pipewell.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641632724/Koduleht/900x900px_pipewell_mockup_pedqzi.jpg" alt=""/></div>
                                         <figcaption>
@@ -179,7 +179,7 @@
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double web photography wow animate__fadeInUp" data-wow-delay="0.4s">
-                                <a href="single-project-page-05.html">
+                                <a href="van_gogh.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641560003/Koduleht/vangoghi_mockup3_900x445_apha1i.jpg" alt=""/></div>
                                         <figcaption>
