--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -63,18 +63,20 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Pipewell</h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Juhtimiskonverents</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</p>
+                        <p>. Eesti Kvaliteediühing liikmeid ühendab huvi kvaliteedi ja selle juhtimise vastu ning soov muuta maailm kasvõi veidi paremaks paigaks, alustades… iseendast, oma tööst ja ettevõttest/organisatsioonist. Minu ülesanne oli kujundada juhtimiskonverentsi "ANDMED RÄÄGIVAD" tunnuslogo ja reklaambänner. Kliendi soov oli, et kujundusel kasutatakse korraga nii eesti kui ka inglise keelt. Samuti olid olulised märksõnad "andmed räägivad". Minu kujundus sümboliseerib aju, mille sisse on kogutud palju erinevaid andmeid.
+                        Siin saavad andmed omavahel kõnelda kui ka erinevaid kooslusi ja ühendusi moodustada. Kokku esitasin kliendile 8 erinevat logokujundust.
+                         </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Pipewell</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Industry:</label>Adventure  /  Travel</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Services:</label>Design, Art Direction, Website</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Date:</label>January 16th, 2017</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Website:</label><a href="#">www.spiceblends.com</a></li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Eesti Kvaliteediühing</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Iseseisev töö</label></li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada konverentsi tunnuslogo </li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Oktoober 2021</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</a></li>
                         </ul>
                     </div>
                 </div>
@@ -86,13 +88,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641659205/Koduleht/Pipewell_logo_elzffk.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641660286/Koduleht/pipewell_visitkaart_esiJPG_zry3ta.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652250/Koduleht/juhtimiskonverents_i1pjds.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641660287/Koduleht/pipewell_visitkaart_taga_cvd0cm.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652639/Koduleht/kvaliteedi_logo_wcrj4z.jpg" class="w-100" alt=""/>
+                    </div>
+                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641670366/Koduleht/konverents_kavandid2_e3gucg.jpg"
+                            class="w-100" alt="" />
                     </div>
                    
                 </div>
@@ -236,9 +242,9 @@
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-05.html">
+                            <a href="single-project-page-08.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Van goghi Raamat
+                                Ametikool 100 Ajakiri
                             </a>
                         </div>
                     </div>
@@ -248,9 +254,9 @@
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
-                            <a href="single-project-page-07.html">
+                            <a href="single-project-page-01.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Bite Dount Menu
+                                Mammut Adventure
                             </a>
                         </div>
                     </div>
