--- a/single-project-page-10.html
+++ b/single-project-page-10.html
@@ -250,7 +250,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
                             <a href="single-project-page-10.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Sporti Bänner
+                                Sporti
                             </a>
                         </div>
                     </div>
