--- a/minu_cvi.html
+++ b/minu_cvi.html
@@ -63,10 +63,10 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Minu Logo</h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Oliver Juss visuaalne identiteet</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</p>
+                        <p>Minu logo on inspireeritud minu nimetähtedest. Kast ümber logo kujutab lapikut „O“-d, ehk minu eesnime esimest tähte. Koloriit on vähene must-valge või kasutaksin ainult ühte värvi. Logo saab keerata J ja U täht muutuvad keerates, kuid sõnum jääb samaks. Inspiratsiooni olen saanud Jaapani tähtedest ja stiilist. Jaapanis tähistatakse iga sõna konkreetse pildiga - nii ka minul nt: kaks hobuserauda ja uss. Samas on logos uss kujundina , või siis tee ,mida mööda kõnnin või merelained – kõik nad kannavad endas arengut ja liikumist. Logo on väga minimalistlik ja sobib väga paljudele kujundustele ning hiljem veebis kasutamiseks.      </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
@@ -86,7 +86,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641653722/Koduleht/logovaratid_mzos4z.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641670974/Koduleht/Logo_erinevad_varvid_lmhefc.jpg" class="w-100" alt=""/>
+                    </div>
+                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641670976/Koduleht/Logomuster_ewgdjc.jpg"
+                            class="w-100" alt="" />
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
                         <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641653467/Koduleht/tempel_m8zk4g.jpg" class="w-100" alt=""/>
